force-app/main/default/objects/UnitTeamMember__c/UnitTeamMember__c.object-meta.xml
<CustomObject>
    <label>Unit Team Member</label>
    <nameField>
        <displayFormat>UTM-{000000}</displayFormat>
        <label>Unit Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>