force-app/main/default/objects/UnitTeamMember__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User active ใน Unit นี้หรือไม่</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>