force-app/main/default/objects/UnitTeamMember__c/fields/IsUserActive__c.field-meta.xml
<CustomField>
    <fullName>IsUserActive__c</fullName>
    <formula>SalesTeam__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Active</label>
    <type>Checkbox</type>
</CustomField>