force-app/main/default/objects/UnitTeamMember__c/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Team ที่สามารถขายห้องนี้ได้</description>
    <label>Sales Team</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UnitTeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>