force-app/main/default/objects/UnitTeamMember__c/fields/UnavailableFrom__c.field-meta.xml
<CustomField>
    <fullName>UnavailableFrom__c</fullName>
    <description>Sales คนนี้ไม่สะดวกรับงานตั้งแต่วันเวลา</description>
    <formula>SalesTeam__r.UnavailableFrom__c</formula>
    <label>Unavailable From</label>
    <type>DateTime</type>
</CustomField>