force-app/main/default/objects/UnitTeamMember__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>ห้องที่ Sales สามารถขายได้</description>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Unit Team Members</relationshipLabel>
    <relationshipName>Unit_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>